# django-outbox-example

./: .gitignore  README.md  docker-compose.yaml
accounts/: .env  Dockerfile
accounts/src/: settings.py  urls.py
accounts/src/apps/core/: models.py
accounts/src/apps/core/fixtures/: admin.json
accounts/src/apps/core/migrations/: 0001_initial.py
accounts/src/apps/outbox/: admin.py  apps.py  models.py
accounts/src/apps/outbox/management/commands/: publisher.py
accounts/src/apps/outbox/migrations/: 0001_initial.py
accounts/src/apps/outbox/tests/: test_with_outbox_decorator.py
rabbitmq/: Dockerfile
recommendations/: .env  Dockerfile  README.md  pyproject.toml
recommendations-api/: .env  .pre-commit-config.yaml  Dockerfile  commands.sh
recommendations-api/src/: wsgi.py
recommendations/src/: asgi.py  settings.py
recommendations/src/apps/core/: consumer.py  models.py  pubsub.py
recommendations/src/apps/core/fixtures/: admin.json
recommendations/src/apps/core/migrations/: 0001_initial.py
user-api/: Dockerfile  gunicorn.conf.py  manage.py
user-api/src/: settings.py
user-api/src/apps/core/migrations/: 0001_initial.py
